# XDU_RAG

./: .env.example  .gitignore  README.md  pyproject.toml  requirement.md  requirements.txt  计算机科学与技术学院-西安电子科技大学本科招生信息网.html
app/: streamlit_app.py
config/: sources.json
data/: chunks.jsonl  crawl_failures.jsonl  documents.jsonl
data/index/: local_vectors.json
data/knowledge_base/pages/: 2026年推荐免试研究生招生预报名通知-研究生院-西安电子科技大学.html  618ac3800d0f815e.html  【创新西电】西电盛敏教授团队成果入选“2025年度信息通信领域十大科技进展”-西安电子科技大学新闻网.html  【学院动态】2024届计算机类专场春季双选会成功举办.html  关于引导2026届毕业生到国家重点单位、 基层和部队就业的通知.html  招生信息.html  西安电子科技大学.html  西安电子科技大学2026年硕士研究生招生调剂工作方案-研究生院-西安电子科技大学.html
src/xidian_rag/: __init__.py  api.py  categorizer.py  chunking.py  cli.py  crawler.py  embeddings.py  io.py  models.py  pipeline.py  rag.py  settings.py  vector_store.py
src/xidian_rag.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_core.py
