[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "xidian-rag"
version = "0.1.0"
description = "RAG search system for public Xidian University official websites."
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "fastapi>=0.111.0",
  "python-dotenv>=1.0.1",
  "requests>=2.32.0",
  "streamlit>=1.36.0",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
chroma = ["chromadb>=0.5.0"]

[project.scripts]
xidian-rag = "xidian_rag.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
